# evc-relay-server

./: .gitignore  README.md
.github/workflows/: docker-publish.yml
crates/: .gitignore  Cargo.toml  Dockerfile  fly.staging.toml  run.sh
crates/relay/: Cargo.toml  build.rs
crates/relay/src/: doc_inspect.rs  doc_restore.rs  doc_versions.rs  lib.rs  main.rs  server.rs  subdocs.rs
crates/y-sweet-core/: Cargo.toml
crates/y-sweet-core/src/: auth.rs  cwt.rs  doc_connection.rs  doc_sync.rs  event.rs  sync_kv.rs
crates/y-sweet-core/src/store/: mod.rs  s3.rs
crates/y-sweet-core/src/sync/: awareness.rs  mod.rs
crates/yrs-kvstore/: Cargo.toml
crates/yrs-kvstore/src/: lib.rs
