[workspace]
resolver = "2"

members = [
    "relay",
    "y-sweet-core",
    "y-sign",
    "yrs-kvstore",
]

exclude = [
    "y-sweet-worker",
]

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Further size optimization
strip = true     # Strip symbols

[patch.crates-io]
rusty-s3 = { git = "https://github.com/dtkav/rusty-s3", branch = "main" }
yrs-kvstore = { path = "yrs-kvstore" }
