[package]
name = "relay"
version = "0.9.6"
edition = "2021"
description = "Self-hosted document collaboration server for the Relay.md network"
license = "MIT"
homepage = "https://relay.md"
repository = "https://github.com/no-instructions/relay-server"
build = "build.rs"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = { version = "0.7.4", features = ["ws", "multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
clap = { version = "4.3.12", features = ["derive", "env"] }
colored = "2.0.4"
dashmap = "6.0.1"
futures = "0.3.28"
headers = "0.4.0"
lib0 = "0.16.9"
nanoid = "0.4.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.11", features = ["rt"] }
toml = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
url = "2.4.0"
y-sweet-core = { version = "0.8.2", path = "../y-sweet-core", features=["sync"] }
yrs = { version = "0.19.1" }
yrs-kvstore = "0.3.0"
bincode = "1.3.3"
ciborium = "0.2"
hex = "0.4.3"
prometheus = "0.13"
p256 = "0.13.2"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
sha2 = "0.10"
tempfile = "3.8.1"

[dev-dependencies]
http = "1.1.0"
tempfile = "3.8.1"
