[package]
name = "yrs-kvstore"
version = "0.3.0"
description = "Generic persistence layer over Yrs documents"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "persistence"]
edition = "2018"
homepage = "https://github.com/y-crdt/yrs-persistence"
repository = "https://github.com/y-crdt/yrs-persistence"
readme = "./README.md"

[dependencies]
yrs = "0.26.0"
thiserror = "1.0"
smallvec = { version = "1.10", features = ["write", "union", "const_generics", "const_new"] }

[lib]
doctest = true
bench = true
doc = true
